[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/gamejolt_api_v2/main.gd" type="Script" id=1]
[ext_resource path="res://Scenes&Scripts/0.gd" type="Script" id=2]
[ext_resource path="res://Fonts/tres/DeterminationS32White.tres" type="DynamicFont" id=3]
[ext_resource path="res://GlobalScenes/SoulPlayer.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Move"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 320, 278 ), Vector2( 320, 248 ), Vector2( 320, 278 ) ]
}

[node name="DataCheck" type="Node2D"]

[node name="Display" type="Control" parent="."]
margin_right = 640.0
margin_bottom = 480.0
script = ExtResource( 2 )

[node name="GameJoltAPI" type="HTTPRequest" parent="Display"]
script = ExtResource( 1 )

[node name="CurrentCheck" type="Label" parent="Display"]
margin_top = 312.0
margin_right = 640.0
margin_bottom = 376.0
custom_fonts/font = ExtResource( 3 )
text = "Checking Game Version..."
align = 1
valign = 1

[node name="SoulPlayer" parent="Display" instance=ExtResource( 4 )]
position = Vector2( 320, 278 )

[node name="Move" type="AnimationPlayer" parent="Display/SoulPlayer"]
autoplay = "Move"
anims/Move = SubResource( 1 )

[connection signal="gamejolt_request_completed" from="Display/GameJoltAPI" to="." method="_on_GameJoltAPI_gamejolt_request_completed"]
